Change project name to match git

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_pokemon_stitcher",
+  "name": "pokemon_stitcher",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://jlouhela.github.io/pokemon_stitcher",
